--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,23 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="main.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body class="grey-bg">
+<body>
 
-    <div class="white-bg">
+    <div class="container-sm">
+        <form action="/append" method="POST">
+            <div class="py-3">
+                <div class="mb-3">
+                    <label for="title" class="form-label">Title</label>
+                    <input type="text" class="form-control" id="title" name="title" aria-describedby="title">
+                    <label for="content" class="form-label">Content</label>
+                    <input type="text" class="form-control" id="content" name="content" aria-describedby="content">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+
         <% for (var i=0; i < 글목록.length; i++){ %>
-            <div class="list-box">
-                <h4>
-                    <%= 글목록[i].title %>
-                </h4>
-                <p>
-                    <%= 글목록[i].content %>
-                </p>
+            <div class="py-2">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <%= 글목록[i].title %>
+                        </h4>
+                        <p class="card-text">
+                            <%= 글목록[i].content %>
+                        </p>
+                    </div>
+                </div>
             </div>
             <% } %>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
 </body>
 
